--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "server": " SET DEBUG=express-locallibrary-tutorial:* & npm run dev"
   },
   "dependencies": {
+    "async": "^3.2.4",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^16.0.3",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
