--- a/package.json
+++ b/package.json
@@ -4,17 +4,19 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "nodemon ./bin/www",
-    "server": " SET DEBUG=express-locallibrary-tutorial:* & npm run dev"
+    "dev": "nodemon --ext * 'js,html,ejs,css,scss' ./bin/www",
+    "server": " SET DEBUG=football Inventory:* & npm run dev"
   },
   "dependencies": {
     "async": "^3.2.4",
+    "connect-livereload": "^0.6.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^16.0.3",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "livereload": "^0.9.3",
     "mongoose": "^7.0.4",
     "morgan": "~1.9.1"
   }
